# codexchat

./: CONTRIBUTING.md  Cargo.toml  README.md  package.json
.github/workflows/: ci.yml  release.yml
crates/codexchat-cli/: Cargo.toml
crates/codexchat-cli/src/: lib.rs  main.rs  tui.rs
crates/codexchat-core/: Cargo.toml
crates/codexchat-core/src/: auth.rs  codex.rs  config.rs  history.rs  lib.rs  models.rs  types.rs
crates/fixtures/: codex-app-server-rust-v0.115.0.json
scripts/: smoke-install.mjs
